--- a/less/main.less
+++ b/less/main.less
@@ -16,32 +16,37 @@ VERSION: 1.0
 Part of an effort to create a modular, lightweight CSS framework.
 
 Title:
-Website CSS Version:
+Website CSS Version: 1.0
 Website URL:
 
 */
 
 
 /*
-LESS VARIABLES
+LESS VARIABLES (Others can be found inside of other modules)
 =========
  */
 
-@pink: #e1377b;
-@blue: #0094D9;
-@light-grey: #d7e6ed;
-@med-grey: #888;
-@dark-grey: #3c4c54;
-@margin-bottom: 50px;
-@margin-right: 5%;
-@line-height: 2.5rem;
+@backgroundColor: 	#fff;
+@primaryTextColor: 	#000;
+@secondaryColor: 	#666;
+@muted:				#999;
 
 /*
 SELECTED MODULES
 ================
+
+If you don't want to use a certain feature, just comment it out. Hooray for lightweight stylesheets!
 */
 
-@import "normalize.css";
-@import "fluid-grid";
+@import "normalize"; //Probably shouldn't remove this one.
+@import "helper";
+@import "grid";
 @import "type";
+
+
+/*
+YOUR STYLES GO RIGHT HURR -- BELOW THIS LINE
+=========================
+*/
 
