--- a/less/type.less
+++ b/less/type.less
@@ -7,24 +7,28 @@
 |_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
               (_____|                      (_____|
 
-===============
+============
 MODULAR TYPE
-===============
+============
 VERSION: 1.0
 ============
 
 Part of an effort to create a modular, lightweight CSS framework.
 
+Type in the Chipped Beef framework is built to maintain a vertical rhythm. 
+Of course, it's very hard to maintain that rhythm in complex websites, but the
+default type settings should keep standard type in rhythm.
+
 */
 
 // Font Families
-@headerFontFamily: "adelle",serif;
-@bodyFontFamily: "garamond-premier-pro-display", serif;
+@headerFontFamily:  "adelle",serif;
+@bodyFontFamily:    "garamond-premier-pro-display", serif;
 
 // Type Scale
-@ratio: 1.618; //Default is golden ratio: 1.618
-@baseFontSize: 2.5rem;
-@lineHeight: 3.5rem; //Should be >= to @baseFontSize
+@ratio:         1.618;          //Default is golden ratio: 1.618
+@baseFontSize:  1.8rem;         //Go crazy, kid
+@lineHeight:    2.5rem;         //Should be >= to @baseFontSize
 
 html {
     font-size: 62.5%;
@@ -77,7 +81,12 @@ small, aside {
     font-size: round(@baseFontSize/@ratio);
 }
 
+/*
+KEEPING IT RESPONSIVE, YO
+=========================
+ */
 
+/* Phones */
 @media only screen and (max-width: 479px) {
     html { font-size: 45%;}
 }
