--- a/less/type.less
+++ b/less/type.less
@@ -22,8 +22,8 @@ default type settings should keep standard type in rhythm.
 */
 
 // Font Families
-@headerFontFamily:  "adelle",serif;
-@bodyFontFamily:    "garamond-premier-pro-display", serif;
+@headerFontFamily:  "Helvetica Neue", sans-serif;
+@bodyFontFamily:    "Helvetica Neue", sans-serif;
 
 // Type Scale
 @ratio:         1.618;          //Default is golden ratio: 1.618
