--- a/css/type.css
+++ b/css/type.css
@@ -24,32 +24,32 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: "garamond-premier-pro-display", serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-size: 1.8rem;
   line-height: 2.5rem;
 }
 h1 {
-  font-family: "adelle", serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-size: 8rem;
   line-height: 7.5rem;
   margin-top: 2.5rem;
 }
 h2 {
-  font-family: "adelle", serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-size: 5rem;
   line-height: 7.5rem;
   margin-top: 7.5rem;
   margin-bottom: 2.5rem;
 }
 h3 {
-  font-family: "adelle", serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-size: 3rem;
   line-height: 5rem;
   margin-top: 5rem;
   margin-bottom: 2.5rem;
 }
 h4 {
-  font-family: "adelle", serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-size: 2rem;
   line-height: 2.5rem;
   margin-top: 2.5rem;
