--- a/less/main.less
+++ b/less/main.less
@@ -50,3 +50,8 @@ YOUR STYLES GO RIGHT HURR -- BELOW THIS LINE
 =========================
 */
 
+body {
+	background: @backgroundColor;
+	color: @primaryTextColor;
+}
+
