--- a/css/main.css
+++ b/css/main.css
@@ -425,7 +425,7 @@ These helper classes are designed to aid in creating small design tweaks.
 ============
 MODULAR GRID (From Bootstrap 2)
 ============
-VERSION: 1.0
+VERSION: 1.1
 ============
 
 * Bootstrap v2.2.2
@@ -1734,4 +1734,9 @@ YOUR STYLES GO RIGHT HURR -- BELOW THIS LINE
 body {
   background: #ffffff;
   color: #000000;
+}
+.box {
+  background: #222;
+  padding: 50px;
+  box-sizing: border-box;
 }
