--- a/less/grid.less
+++ b/less/grid.less
@@ -10,7 +10,7 @@
 ============
 MODULAR GRID (From Bootstrap 2)
 ============
-VERSION: 1.0
+VERSION: 1.1
 ============
 
 * Bootstrap v2.2.2
@@ -34,7 +34,8 @@ VERSION: 1.0
 //=========
 
 //Set container width for largest grid size
-@gridContainerWidth:  960px; //Actual value with will be (THIS - gridGutterWidth) Ex if this is 960, and gutter is 20px, final will be 940px.
+@gridRowWidth:        960px; //Determine size of Row
+@gridContainerWidth:  960px; //Useful if you are placing the grid inside of a box with padding
 @gridGutterWidth:     20px;
 @gridColumns:         12;
 
@@ -42,7 +43,7 @@ VERSION: 1.0
 //DON'T EDIT BELOW THIS LINE
 
 //Determine base column size and final container size
-@gridColumnWidth: (@gridContainerWidth - (@gridColumns * @gridGutterWidth))/@gridColumns;
+@gridColumnWidth: (@gridRowWidth - (@gridColumns * @gridGutterWidth))/@gridColumns;
 @containerWidth: @gridContainerWidth - @gridGutterWidth;
 
 // // 1200px min
