Made show-grid class snazzier

--- a/less/helper.less
+++ b/less/helper.less
@@ -53,3 +53,7 @@ These helper classes are designed to aid in creating small design tweaks.
     border-radius: 5px;
     padding: 10px 30px;
 }
+
+.show-grid:hover [class*="span"] {
+    background: darken(#eee, 10%);
+}
