--- a/css/helper.css
+++ b/css/helper.css
@@ -47,3 +47,6 @@ These helper classes are designed to aid in creating small design tweaks.
   border-radius: 5px;
   padding: 10px 30px;
 }
+.show-grid:hover [class*="span"] {
+  background: #d5d5d5;
+}
