--- a/css/main.css
+++ b/css/main.css
@@ -413,6 +413,85 @@ These helper classes are designed to aid in creating small design tweaks.
   border-radius: 5px;
   padding: 10px 30px;
 }
+.show-grid:hover [class*="span"] {
+  background: #d5d5d5;
+}
+/*
+ _     _                _____             _                  
+| |   | |              (____ \           (_)                 
+| |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
+|  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
+| |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
+|_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
+              (_____|                      (_____|
+
+============
+MODULAR TYPE
+============
+VERSION: 1.0
+============
+
+Part of an effort to create a modular, lightweight CSS framework.
+
+Type in the Chipped Beef framework is built to maintain a vertical rhythm. 
+Of course, it's very hard to maintain that rhythm in complex websites, but the
+default type settings should keep standard type in rhythm.
+
+*/
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 1.8rem;
+  line-height: 2.5rem;
+}
+h1 {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 8rem;
+  line-height: 7.5rem;
+  margin-top: 2.5rem;
+}
+h2 {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 5rem;
+  line-height: 7.5rem;
+  margin-top: 7.5rem;
+  margin-bottom: 2.5rem;
+}
+h3 {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 3rem;
+  line-height: 5rem;
+  margin-top: 5rem;
+  margin-bottom: 2.5rem;
+}
+h4 {
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  margin-top: 2.5rem;
+  margin-bottom: 0rem;
+}
+p,
+ul {
+  margin-top: 0rem;
+  margin-bottom: 2.5rem;
+}
+small,
+aside {
+  font-size: 1rem;
+}
+/*
+KEEPING IT RESPONSIVE, YO
+=========================
+ */
+/* Phones */
+@media only screen and (max-width: 480px) {
+  html {
+    font-size: 45%;
+  }
+}
 /*
  _     _                _____             _                  
 | |   | |              (____ \           (_)                 
@@ -1652,86 +1731,25 @@ VERSION: 1.1
   }
 }
 /*
- _     _                _____             _                  
-| |   | |              (____ \           (_)                 
-| |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
-|  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
-| |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
-|_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
-              (_____|                      (_____|
-
-============
-MODULAR TYPE
-============
-VERSION: 1.0
-============
-
-Part of an effort to create a modular, lightweight CSS framework.
-
-Type in the Chipped Beef framework is built to maintain a vertical rhythm. 
-Of course, it's very hard to maintain that rhythm in complex websites, but the
-default type settings should keep standard type in rhythm.
-
-*/
-html {
-  font-size: 62.5%;
-}
-body {
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 1.8rem;
-  line-height: 2.5rem;
-}
-h1 {
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 8rem;
-  line-height: 7.5rem;
-  margin-top: 2.5rem;
-}
-h2 {
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 5rem;
-  line-height: 7.5rem;
-  margin-top: 7.5rem;
-  margin-bottom: 2.5rem;
-}
-h3 {
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 3rem;
-  line-height: 5rem;
-  margin-top: 5rem;
-  margin-bottom: 2.5rem;
-}
-h4 {
-  font-family: "Helvetica Neue", sans-serif;
-  font-size: 2rem;
-  line-height: 2.5rem;
-  margin-top: 2.5rem;
-  margin-bottom: 0rem;
-}
-p,
-ul {
-  margin-top: 0rem;
-  margin-bottom: 2.5rem;
-}
-small,
-aside {
-  font-size: 1rem;
-}
-/*
-KEEPING IT RESPONSIVE, YO
-=========================
- */
-/* Phones */
-@media only screen and (max-width: 479px) {
-  html {
-    font-size: 45%;
-  }
-}
-/*
 YOUR STYLES GO RIGHT HURR -- BELOW THIS LINE
 =========================
 */
 body {
   background: #ffffff;
   color: #000000;
+}
+a {
+  color: #666666;
+  text-decoration: none;
+}
+a:hover {
+  color: #4d4d4d;
+}
+@media (max-width: 480px) {
+  [class*="span"] {
+    margin-bottom: 2.5rem;
+  }
+  [class*="span"]:last-child {
+    margin-bottom: 0px;
+  }
 }
