--- a/less/grid.less
+++ b/less/grid.less
@@ -34,7 +34,7 @@ VERSION: 1.1
 //=========
 
 //Set container width for largest grid size
-@gridRowWidth:        960px; //Determine size of Row
+@gridRowWidth:        960px; //Determine size of row
 @gridContainerWidth:  960px; //Useful if you are placing the grid inside of a box with padding
 @gridGutterWidth:     20px;
 @gridColumns:         12;
