--- a/less/grid.less
+++ b/less/grid.less
@@ -108,6 +108,9 @@ VERSION: 1.1
 .row:after {
   clear: both;
 }
+.row:only-child * {
+    margin-bottom: 0px;
+}
 [class*="span"] {
   float: left;
   min-height: 1px;
