--- a/less/type.less
+++ b/less/type.less
@@ -1,25 +1,25 @@
-/*
- _     _                _____             _                  
-| |   | |              (____ \           (_)                 
-| |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
-|  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
-| |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
-|_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
-              (_____|                      (_____|
 
-============
-MODULAR TYPE
-============
-VERSION: 1.0
-============
+//  _     _                _____             _                  
+// | |   | |              (____ \           (_)                 
+// | |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
+// |  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
+// | |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
+// |_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
+//               (_____|                      (_____|
 
-Part of an effort to create a modular, lightweight CSS framework.
+// ============
+// MODULAR TYPE
+// ============
+// VERSION: 1.0
+// ============
 
-Type in the Chipped Beef framework is built to maintain a vertical rhythm. 
-Of course, it's very hard to maintain that rhythm in complex websites, but the
-default type settings should keep standard type in rhythm.
+// Part of an effort to create a modular, lightweight CSS framework.
 
-*/
+// Type in the Chipped Beef framework is built to maintain a vertical rhythm. 
+// Of course, it's very hard to maintain that rhythm in complex websites, but the
+// default type settings should keep standard type in rhythm.
+
+/* Base Typography */
 
 // Font Families
 @headerFontFamily:  "Helvetica Neue", sans-serif;
