--- a/less/helper.less
+++ b/less/helper.less
@@ -1,23 +1,22 @@
-/*
- _     _                _____             _                  
-| |   | |              (____ \           (_)                 
-| |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
-|  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
-| |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
-|_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
-              (_____|                      (_____|
+//  _     _                _____             _                  
+// | |   | |              (____ \           (_)                 
+// | |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
+// |  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
+// | |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
+// |_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
+//               (_____|                      (_____|
 
-======================
-MODULAR HELPER CLASSES (Based on the Bootstrap helpers)
-======================
-VERSION: 1.0
-============
+// ======================
+// MODULAR HELPER CLASSES (Based on the Bootstrap helpers)
+// ======================
+// VERSION: 1.0
+// ============
 
-Part of an effort to create a modular, lightweight CSS framework.
+// Part of an effort to create a modular, lightweight CSS framework.
 
-These helper classes are designed to aid in creating small design tweaks.
+// These helper classes are designed to aid in creating small design tweaks.
 
-*/
+/* Helper Classes */
 
 .clearfix {
     *zoom: 1;
@@ -51,7 +50,7 @@ These helper classes are designed to aid in creating small design tweaks.
 .show-grid [class*="span"] {
     background: #eee;
     border-radius: 5px;
-    padding: 10px 30px;
+    padding: 10px 20px;
 }
 
 .show-grid:hover [class*="span"] {
