--- a/less/main.less
+++ b/less/main.less
@@ -1,53 +1,52 @@
+//  _     _                _____             _                  
+// | |   | |              (____ \           (_)                 
+// | |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
+// |  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
+// | |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
+// |_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
+//               (_____|                      (_____|
+
+// =============
+// MAIN CSS FILE
+// =============
+// VERSION: 1.1
+// ============
+
+// Part of an effort to create a modular, lightweight CSS framework.
+
 /*
- _     _                _____             _                  
-| |   | |              (____ \           (_)                 
-| |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
-|  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
-| |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
-|_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
-              (_____|                      (_____|
-
-=============
-MAIN CSS FILE
-=============
-VERSION: 1.0
-============
-
-Part of an effort to create a modular, lightweight CSS framework.
-
-Title:
+Title: Chipped Beef
 Website CSS Version: 1.0
 Website URL:
-
 */
 
 
-/*
-LESS VARIABLES (Others can be found inside of other modules)
-=========
- */
+// LESS VARIABLES (Others can be found inside of other modules)
+// =========
 
 @backgroundColor: 	#fff;
 @primaryTextColor: 	#000;
-@secondaryColor: 	#666;
+@secondaryColor: 	#f44040;
 @muted:				#999;
+@subtle:			#ececec;
 
-/*
-SELECTED MODULES
-================
 
-If you don't want to use a certain feature, just comment it out. Hooray for lightweight stylesheets!
-*/
+// SELECTED MODULES
+// ================
+
+// If you don't want to use a certain feature, just comment it out. Hooray for lightweight stylesheets!
+
 
 @import "normalize"; //Probably shouldn't remove this one.
 @import "helper";
+@import "buttons";
 @import "type";
 @import "grid";
 
-/*
-YOUR STYLES GO RIGHT HURR -- BELOW THIS LINE
-=========================
-*/
+
+// YOUR STYLES GO RIGHT HURR -- BELOW THIS LINE
+// =========================
+
 
 body {
 	background: @backgroundColor;
@@ -61,13 +60,4 @@ a {
 
 a:hover {
 	color: darken(@secondaryColor, 10%);
-}
-
-@media (max-width: 480px) {
-	[class*="span"] {
-		margin-bottom: @lineHeight;
-	}
-	[class*="span"]:last-child {
-		margin-bottom: 0px;
-	}
 }
