--- a/less/normalize.less
+++ b/less/normalize.less
@@ -22,7 +22,7 @@ summary {
     display: block;
 }
 
-div {
+div, nav, ul, section, footer, header, article {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
