--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,13 @@ section,
 summary {
   display: block;
 }
-div {
+div,
+nav,
+ul,
+section,
+footer,
+header,
+article {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -377,6 +383,14 @@ table {
 .show-grid:hover [class*="span"] {
   background: #d5d5d5;
 }
+@media (max-width: 480px) {
+  .show-grid [class*="span"] {
+    margin-bottom: 2.5rem;
+  }
+  .show-grid [class*="span"]:last-child {
+    margin-bottom: 0;
+  }
+}
 /*
  _     _                _____             _                  
 | |   | |              (____ \           (_)                 
@@ -397,27 +411,28 @@ Part of an effort to create a modular, lightweight CSS framework.
 This file contains an assortment of buttons to get you started.
 
 */
-.button {
+.button,
+button {
   background: #f44040;
   border: solid #c30b0b;
   border-radius: 3px;
-  border-width: 1px 1px 4px 1px;
-  box-shadow: inset 0px 1px 0px #f77070;
+  border-width: 0 0 4px 0;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   margin-bottom: 2.5rem;
-  padding: 1.25rem;
-  text-shadow: 0px -1px 0px #c30b0b;
+  padding: 1.25rem 2.5rem;
   text-align: center;
   text-decoration: none;
+  white-space: nowrap;
   -webkit-transition: .2s linear background;
   -moz-transition: .2s linear background;
   -o-transition: .2s linear background;
   -ms-transition: .2s linear background;
   transition: .2s linear background;
 }
-.button:hover {
+.button:hover,
+button:hover {
   background: #f32828;
   -webkit-transition: .2s linear background;
   -moz-transition: .2s linear background;
@@ -425,17 +440,70 @@ This file contains an assortment of buttons to get you started.
   -ms-transition: .2s linear background;
   transition: .2s linear background;
 }
-.button:active {
+.button:active,
+button:active {
   margin-top: 1px;
   border-bottom-width: 3px;
 }
 .button.secondary {
-  background: #ececec;
+  background: #d3d3d3;
   border: solid #b9b9b9;
-  border-width: 1px 1px 4px 1px;
-  box-shadow: inset 0px 1px 0px #ffffff;
-  color: #000000;
-  text-shadow: 0px -1px 0px #ffffff;
+  border-width: 0 0 4px 0;
+  color: #fff;
+}
+.button.secondary:hover {
+  background: #c6c6c6;
+}
+.button.full-width {
+  display: block;
+}
+/*
+ _     _                _____             _                  
+| |   | |              (____ \           (_)                 
+| |__ | | ____  ____    _   \ \ ____  ___ _  ____ ____   ___ 
+|  __)| |/ _  |/ _  |  | |   | / _  )/___) |/ _  |  _ \ /___)
+| |   | ( ( | ( ( | |  | |__/ ( (/ /|___ | ( ( | | | | |___ | 
+|_|   |_|\_||_|\_|| |  |_____/ \____|___/|_|\_|| |_| |_(___/ 
+              (_____|                      (_____|
+
+=============
+MODULAR FORMS
+=============
+VERSION: 1.0
+============
+
+Part of an effort to create a modular, lightweight CSS framework.
+
+This file contains an assortment of default form styling to get you started.
+
+*/
+input,
+textarea,
+select {
+  box-sizing: border-box;
+  margin-bottom: 2.5rem;
+  padding: 1.25rem;
+  width: 100%;
+}
+input,
+textarea {
+  border: solid #ececec;
+  border-width: 3px;
+  border-radius: 5px;
+  -webkit-transition: border .2s linear;
+  -moz-transition: border .2s linear;
+  -o-transition: border .2s linear;
+  -ms-transition: border .2s linear;
+  transition: border .2s linear;
+}
+input:focus,
+textarea:focus {
+  border: solid #f44040;
+  -webkit-transition: border .2s linear;
+  -moz-transition: border .2s linear;
+  -o-transition: border .2s linear;
+  -ms-transition: border .2s linear;
+  transition: border .2s linear;
 }
 /* Base Typography */
 html {
@@ -1041,43 +1109,43 @@ KEEPING IT RESPONSIVE, YO
   .navbar-static-top .container,
   .navbar-fixed-top .container,
   .navbar-fixed-bottom .container {
-    width: 876px;
+    width: 732px;
   }
   .span12 {
-    width: 856px;
+    width: 712px;
   }
   .span11 {
-    width: 783px;
+    width: 651px;
   }
   .span10 {
-    width: 710px;
+    width: 590px;
   }
   .span9 {
-    width: 637px;
+    width: 529px;
   }
   .span8 {
-    width: 564px;
+    width: 468px;
   }
   .span7 {
-    width: 491px;
+    width: 407px;
   }
   .span6 {
-    width: 418px;
+    width: 346px;
   }
   .span5 {
-    width: 345px;
+    width: 285px;
   }
   .span4 {
-    width: 272px;
+    width: 224px;
   }
   .span3 {
-    width: 199px;
+    width: 163px;
   }
   .span2 {
-    width: 126px;
+    width: 102px;
   }
   .span1 {
-    width: 53px;
+    width: 41px;
   }
   .offset12 {
     margin-left: 764px;
@@ -1300,62 +1368,62 @@ KEEPING IT RESPONSIVE, YO
   input.span12,
   textarea.span12,
   .uneditable-input.span12 {
-    width: 710px;
+    width: 712px;
   }
   input.span11,
   textarea.span11,
   .uneditable-input.span11 {
-    width: 648px;
+    width: 651px;
   }
   input.span10,
   textarea.span10,
   .uneditable-input.span10 {
-    width: 586px;
+    width: 590px;
   }
   input.span9,
   textarea.span9,
   .uneditable-input.span9 {
-    width: 524px;
+    width: 529px;
   }
   input.span8,
   textarea.span8,
   .uneditable-input.span8 {
-    width: 462px;
+    width: 468px;
   }
   input.span7,
   textarea.span7,
   .uneditable-input.span7 {
-    width: 400px;
+    width: 407px;
   }
   input.span6,
   textarea.span6,
   .uneditable-input.span6 {
-    width: 338px;
+    width: 346px;
   }
   input.span5,
   textarea.span5,
   .uneditable-input.span5 {
-    width: 276px;
+    width: 285px;
   }
   input.span4,
   textarea.span4,
   .uneditable-input.span4 {
-    width: 214px;
+    width: 224px;
   }
   input.span3,
   textarea.span3,
   .uneditable-input.span3 {
-    width: 152px;
+    width: 163px;
   }
   input.span2,
   textarea.span2,
   .uneditable-input.span2 {
-    width: 90px;
+    width: 102px;
   }
   input.span1,
   textarea.span1,
   .uneditable-input.span1 {
-    width: 28px;
+    width: 41px;
   }
 }
 @media (min-width: 1200px) {
@@ -1640,62 +1708,62 @@ KEEPING IT RESPONSIVE, YO
   input.span12,
   textarea.span12,
   .uneditable-input.span12 {
-    width: 1156px;
+    width: 1120px;
   }
   input.span11,
   textarea.span11,
   .uneditable-input.span11 {
-    width: 1056px;
+    width: 1025px;
   }
   input.span10,
   textarea.span10,
   .uneditable-input.span10 {
-    width: 956px;
+    width: 930px;
   }
   input.span9,
   textarea.span9,
   .uneditable-input.span9 {
-    width: 856px;
+    width: 835px;
   }
   input.span8,
   textarea.span8,
   .uneditable-input.span8 {
-    width: 756px;
+    width: 740px;
   }
   input.span7,
   textarea.span7,
   .uneditable-input.span7 {
-    width: 656px;
+    width: 645px;
   }
   input.span6,
   textarea.span6,
   .uneditable-input.span6 {
-    width: 556px;
+    width: 550px;
   }
   input.span5,
   textarea.span5,
   .uneditable-input.span5 {
-    width: 456px;
+    width: 455px;
   }
   input.span4,
   textarea.span4,
   .uneditable-input.span4 {
-    width: 356px;
+    width: 360px;
   }
   input.span3,
   textarea.span3,
   .uneditable-input.span3 {
-    width: 256px;
+    width: 265px;
   }
   input.span2,
   textarea.span2,
   .uneditable-input.span2 {
-    width: 156px;
+    width: 170px;
   }
   input.span1,
   textarea.span1,
   .uneditable-input.span1 {
-    width: 56px;
+    width: 75px;
   }
   .thumbnails {
     margin-left: -30px;
@@ -1709,7 +1777,7 @@ KEEPING IT RESPONSIVE, YO
 }
 body {
   background: #ffffff;
-  color: #000000;
+  color: #333333;
 }
 a {
   color: #f44040;
