--- a/less/main.less
+++ b/less/main.less
@@ -25,7 +25,7 @@ Website URL:
 // =========
 
 @backgroundColor: 	#fff;
-@primaryTextColor: 	#000;
+@primaryTextColor: 	#333;
 @secondaryColor: 	#f44040;
 @muted:				#999;
 @subtle:			#ececec;
@@ -40,6 +40,7 @@ Website URL:
 @import "normalize"; //Probably shouldn't remove this one.
 @import "helper";
 @import "buttons";
+@import "forms";
 @import "type";
 @import "grid";
 
