--- a/less/buttons.less
+++ b/less/buttons.less
@@ -68,6 +68,16 @@ This file contains an assortment of buttons to get you started.
         background: darken(@subtle, 15%);
     }
 
+.button.sucess {
+    background-color: @success;
+    border-color: darken(@success, 10%);
+}
+
+    .button.success:hover {
+        background: darken(@success, 5%);
+    }
+
+/* Button helper classes */
 .button.full-width {
     display: block;
 }
