--- a/less/main.less
+++ b/less/main.less
@@ -24,11 +24,16 @@ Website URL:
 // LESS VARIABLES (Others can be found inside of other modules)
 // =========
 
-@backgroundColor: 	#fff;
-@primaryTextColor: 	#333;
+@backgroundColor: 	#ffffff;
+@primaryTextColor: 	#333333;
 @secondaryColor: 	#f44040;
-@muted:				#999;
+@muted:				#999999;
 @subtle:			#ececec;
+
+@error:				#E74C3C;
+@success:			#2ECC71;
+@warning: 			#F1C40F;
+@info:				#3498DB;
 
 
 // SELECTED MODULES
